--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ body{-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;font-f
       </div>
     </div>
     <div class="container-1-2-67">
-      <img class="logo-1-2-68" src="no_products.svg" alt="initialImage">
+      <img class="logo-1-2-68" src="https://raw.githubusercontent.com/Sonlock/cam3/353490068d7b89ddacc174b5170e7037d8769449/no_products.svg" alt="initialImage">
       <p class="text-1-2-69">Acerca el código al lector</p>
     </div>
   </div>
