--- a/index.html
+++ b/index.html
@@ -297,12 +297,12 @@ body{-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;font-f
 <body class="ReactModal__Body--open"><div data-react-modal-body-trap="" tabindex="0" style="position: absolute; opacity: 0;">
 </div>
   <div id="root"><div class="container-1-2-40"><div class="container-1-2-43"><button type="button" class="leftArrow-1-2-46 transparentBtn-1-2-50"><div class="container-1-2-51">
-    <img src="burger_menu.83c9ff38e26664261e75a015418b96bc.svg" class="burgerIcon-1-2-52" alt="burcer_icon"></div></button>
+    <img src="/burger_menu.83c9ff38e26664261e75a015418b96bc.svg" class="burgerIcon-1-2-52" alt="burcer_icon"></div></button>
   <p class="text-1-2-45">Lector Barra</p>
   <button type="button" class="camera-1-2-47 transparentBtn-1-2-50">
     <img class="logo-1-2-44" src="/camera_off_icon.svg" alt="camera"></button>
     <a class="lens-1-2-48 transparentBtn-1-2-50" href="/search">
-      <img class="logo-1-2-44" src="search_icon.9d3aeeceeaf8bdd635df36d45a0b6cd5.svg" alt="lens"></a></div>
+      <img class="logo-1-2-44" src="/search_icon.9d3aeeceeaf8bdd635df36d45a0b6cd5.svg" alt="lens"></a></div>
     <div class="barcodeScannerContainer-1-2-53">
       <div style="position: absolute; width: 100vw; height: 200px;">
         <div class="scandit scandit-container">
